--- a/templates/ui/navbar.html.twig
+++ b/templates/ui/navbar.html.twig
@@ -1,6 +1,6 @@
 <div class="app-header header-shadow">
 	<div class="app-header__logo">
-		<div class="logo-src" style="background: url(/assets/images/logo-inverse.png)"></div>
+		<div class="logo-container"></div>
 		<div class="header__pane ml-auto">
 			<div>
 				<button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
