--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -26,7 +26,7 @@
 			<div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
 				 
 				<div class="app-main">
-					{% include 'ui/sidebar.html.twig' %}
+					{% include 'ui/sidebarMain.html.twig' %}
 					
 					{% include 'ui/appBody.html.twig' %}
 					
